# PixelFX

./: CMakeLists.txt  README.md
Blur/: Blur.cu
Emboss/: emboss.cu
GreyscaleInvert/: GreyscaleInvert.cu
Mean/: Mean.cu
Sepia/: Sepia.cu
filterscu/: filter_common.cuh  filter_dispatch.cu  filter_dispatch.h  filter_prewitt.cu
gui/: CMakeLists.txt  gui_app.cpp  gui_app.h  main_gui.cpp
